# gooSQL

./: CMakeLists.txt  Makefile  README.md  database.gsql  gooSQL  main.c
lang/: Ast.c  Ast.h  Lexer.c  Parser.c  Parser.h  lexer.h
runtime/: Database.c  Databse.h
storage/: Storage.c  Storage.h
